# transcendence

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  HOW_TO_LAUNCH.md  Makefile  README.md  docker-compose.yml
auth/: Dockerfile  HOW_TO_USE.md  MODULE.md  README.md  main.py  pyproject.toml
auth/app/: config.py  dependencies.py  exceptions.py
auth/app/clients/: __init__.py  realtime_client.py
auth/app/core/: __init__.py  ft_oauth.py  google_oauth.py  security.py  tokens.py
auth/app/models/: auth.py  user.py
auth/app/repositories/: __init__.py  oauth_repository.py  token_repository.py  user_repository.py
auth/app/routers/: auth.py  health.py  oauth.py
auth/app/schemas/: __init__.py  oauth.py  specific_response.py  token.py  two_factor.py  user.py
auth/app/services/: __init__.py  auth_service.py  health_service.py
auth/docs/: AUTH.md  AUTH_FLOW.md  FAST_API.md  FastAPI.md  SQL_ALCHEMY.md
core/: Dockerfile  MODULE.md  README.md  main.py  pyproject.toml
core/app/: config.py  exceptions.py  get_user.py
docs/: DEV_DOC.md  PROJECT_VISION.md
frontend/: Dockerfile  MODULE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
gateway/: Dockerfile  MODULE.md  README.md
gateway/conf/: default.conf.template  modsecurity-override.conf  routing.conf  setup.conf.template
migrations/: Dockerfile  README.md  models_registry.py  pyproject.toml
migrations/alembic/: env.py
org/: Dockerfile  MODULE.md  README.md  dev_doc.md  main.py  pyproject.toml
org/app/: config.py  dependancies.py  exceptions.py  get_user.py
org/app/models/: organisation.py
org/app/repositories/: __init__.py  invitation_repository.py  member_org_repository.py  organisation_repository.py
org/app/routers/: health.py  internal.py  invitation.py  organisation.py  permission.py  simulate_auth.py  user_crud.py
org/app/schemas/: organisation.py  roles.py  user.py  user_schema.py
org/app/services/: crud_service.py  invitation_service.py  membership_service.py  organisation_service.py  perm_managment_services.py  permission_service.py
rag/: Dockerfile  MODULE.md  README.md  chat_cli.py  main.py  pyproject.toml  test_query.py
rag/app/: config.py  exceptions.py  get_user.py
rag/app/models/: chunk.py  conversation.py  message.py
rag/app/repositories/: chunk_repository.py  conversation_repository.py
rag/app/routers/: conversation.py  health.py  ingest.py  query.py
rag/app/schemas/: conversation.py  ingest.py  query.py
rag/app/services/: conversation_service.py  embedding_service.py  health_service.py  ingest_service.py  query_service.py  rerank_service.py
rag/app/services/llm/: key_manager.py  model.py  openai_compatible_service.py
rag/app/storage/: reader_storage.py
realtime/: Dockerfile  MODULE.md  README.md  main.py  pyproject.toml
shared/: base_service.py  database.py  generic_crud.py
(+98 files in other folders)
