[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
