[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pyotp>=2.10.0",
    "sqlalchemy>=2.0.51",
    "types-passlib>=1.7.7.20260211",
    "uvicorn[standard]>=0.49.0",
]

[tool.mypy]
mypy_path = ".."
