[project]
name = "org"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[tool.mypy]
mypy_path = ".."
explicit_package_bases = true
