[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pgvector>=0.5.0",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.13.0",
    "uvicorn[standard]>=0.49.0",
]
