[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "langchain-text-splitters>=1.1.2",
    "pgvector>=0.5.0",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.13.0",
    "uvicorn[standard]>=0.49.0",
]

# Inference runs on CPU on the 42 workstation, so pull torch from the
# CPU-only PyTorch index. This avoids the multi-gigabyte NVIDIA/CUDA
# wheels and keeps the rag image small enough to build on /goinfre.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
